--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,13 @@ prometheus-client==0.19.0
 pyyaml==6.0.1
 requests==2.31.0
 
+# Security & Authentication
+pyjwt==2.8.0
+bcrypt==4.1.2
+
+# Database
+sqlalchemy==2.0.23
+
 # Data Processing
 pandas==2.1.4
 numpy==1.26.2
