security: Add comprehensive security hardening
- Update .gitignore to protect sensitive files (.env, data/, backups/, logs/)
- Remove .env from git tracking (git rm --cached .env)
- Enhance .env.example with security warnings and generation instructions
- Add SECURITY_CHECKLIST.md with comprehensive pre-deployment verification
- Create scripts/generate_secrets.py for secure secret generation
- Create scripts/setup_security.sh and setup_security.ps1 for quick setup
- Add security best practices documentation
- Protect database, backups, certificates, and SSH keys from version control

CRITICAL CHANGES:
- .env now properly excluded from git (was tracked before)
- Database files (*.db) now protected
- Backup files (*.tar.gz) now protected
- Added checklist for production deployment security
- Secret generation tools for proper entropy

This commit addresses security audit findings and ensures no sensitive
data can be accidentally committed to version control.

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,17 @@
-# Environment Configuration
-# Copy this file to .env.local and customize for your environment
+# Environment Configuration - TEMPLATE FILE
+# ⚠️ SECURITY WARNING: Copy this file to .env and update all secrets
+# ⚠️ NEVER commit .env files with real credentials to version control
+# ⚠️ Generate strong secrets using: openssl rand -hex 32
 
 # MQTT Broker Configuration
 MQTT_BROKER_HOST=localhost
 MQTT_BROKER_PORT=1883
-MQTT_USERNAME=
-MQTT_PASSWORD=
+MQTT_USERNAME=your-mqtt-username-here
+MQTT_PASSWORD=your-mqtt-password-here
 MQTT_USE_TLS=false
-MQTT_CA_CERT_PATH=
-MQTT_CLIENT_CERT_PATH=
-MQTT_CLIENT_KEY_PATH=
+MQTT_CA_CERT_PATH=/path/to/ca.crt
+MQTT_CLIENT_CERT_PATH=/path/to/client.crt
+MQTT_CLIENT_KEY_PATH=/path/to/client.key
 
 # Prometheus Configuration
 PROMETHEUS_URL=http://localhost:9090
@@ -19,18 +21,21 @@ PROMETHEUS_RETENTION_DAYS=15
 # Grafana Configuration
 GRAFANA_URL=http://localhost:3000
 GRAFANA_ADMIN_USER=admin
-GRAFANA_ADMIN_PASSWORD=admin
+# ⚠️ CHANGE THIS: Use strong password (min 16 chars, mixed case, numbers, symbols)
+GRAFANA_ADMIN_PASSWORD=CHANGE_ME_TO_STRONG_PASSWORD
 
 # API Configuration
 API_HOST=0.0.0.0
 API_PORT=5000
-API_DEBUG=true
-API_SECRET_KEY=change-this-to-a-random-secret-key
-API_CORS_ORIGINS=*
+API_DEBUG=false  # ALWAYS false in production
+# ⚠️ CRITICAL: Generate with: python -c "import secrets; print(secrets.token_hex(32))"
+API_SECRET_KEY=GENERATE_RANDOM_SECRET_KEY_HERE
+API_CORS_ORIGINS=http://localhost:3000
 
-# Authentication (JWT)
-JWT_ENABLED=false
-JWT_SECRET_KEY=change-this-to-a-random-jwt-secret
+# Authentication (JWT) - SECURITY CRITICAL
+JWT_ENABLED=true
+# ⚠️ CRITICAL: Generate with: python -c "import secrets; print(secrets.token_hex(32))"
+JWT_SECRET_KEY=GENERATE_RANDOM_JWT_SECRET_KEY_HERE
 JWT_EXPIRATION_HOURS=24
 JWT_ALGORITHM=HS256
 
@@ -53,7 +58,8 @@ FEEDBACK_HISTORY_SIZE=1000
 
 # Persistence
 DATABASE_TYPE=sqlite  # Options: sqlite, postgresql
-DATABASE_URL=sqlite:///imperium.db
+# ⚠️ SECURITY: For production, use PostgreSQL with encrypted connections
+DATABASE_URL=sqlite:///data/imperium.db
 DATABASE_POOL_SIZE=5
 DATABASE_ECHO=false
 
@@ -62,7 +68,8 @@ POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=imperium
 POSTGRES_USER=imperium
-POSTGRES_PASSWORD=
+# ⚠️ CHANGE THIS: Use strong password (min 16 chars)
+POSTGRES_PASSWORD=CHANGE_ME_TO_STRONG_PASSWORD
 
 # Logging
 LOG_LEVEL=INFO  # DEBUG, INFO, WARNING, ERROR, CRITICAL
@@ -83,21 +90,40 @@ MAX_DEVICES=100
 POLICY_ENFORCEMENT_TIMEOUT=500  # milliseconds
 
 # Development
-DEBUG=true
+DEBUG=false  # ALWAYS false in production
 TESTING=false
 MOCK_NETWORK_ENFORCEMENT=false  # Set true on non-Linux systems
 MOCK_MQTT_BROKER=false
 
-# Security
-RATE_LIMIT_ENABLED=false
+# Security - IMPORTANT
+RATE_LIMIT_ENABLED=true
 RATE_LIMIT_PER_MINUTE=60
-ALLOWED_HOSTS=*
-CORS_ALLOW_CREDENTIALS=false
+ALLOWED_HOSTS=localhost,127.0.0.1
+CORS_ALLOW_CREDENTIALS=true
 
 # Raspberry Pi Specific
 RPI_CPU_THRESHOLD=60  # Percentage
 RPI_MEMORY_THRESHOLD=70  # Percentage
 RPI_TEMP_THRESHOLD=70  # Celsius
+
+# ====================================================================================
+# SECURITY CHECKLIST FOR PRODUCTION:
+# ====================================================================================
+# [ ] Generate new API_SECRET_KEY: python -c "import secrets; print(secrets.token_hex(32))"
+# [ ] Generate new JWT_SECRET_KEY: python -c "import secrets; print(secrets.token_hex(32))"
+# [ ] Change GRAFANA_ADMIN_PASSWORD to strong password
+# [ ] Set POSTGRES_PASSWORD if using PostgreSQL
+# [ ] Set MQTT_USERNAME and MQTT_PASSWORD
+# [ ] Set API_DEBUG=false
+# [ ] Set DEBUG=false
+# [ ] Enable JWT_ENABLED=true
+# [ ] Enable RATE_LIMIT_ENABLED=true
+# [ ] Configure ALLOWED_HOSTS with your domain/IP
+# [ ] Set up MQTT TLS certificates if MQTT_USE_TLS=true
+# [ ] Never commit .env file to git (check .gitignore)
+# [ ] Use environment variables in CI/CD (not .env files)
+# [ ] Rotate secrets quarterly or after any security incident
+# ====================================================================================
 RPI_THROTTLE_ON_OVERHEAT=true
 
 # Feature Flags
