--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,52 @@ monitoring/grafana/data/
 config/secrets.yml
 config/*.secret
 
+# Environment Variables - SECURITY CRITICAL
+.env
+.env.local
+.env.production
+.env.development
+.env.*.local
+*.env
+!.env.example
+
+# Database Files - CONTAINS SENSITIVE DATA
+data/
+*.db
+*.sqlite
+*.sqlite3
+imperium.db
+
+# Backup Files - MAY CONTAIN SENSITIVE DATA
+backups/
+*.tar.gz
+*.zip
+*.backup
+
+# SSL/TLS Certificates - SECURITY CRITICAL
+*.pem
+*.key
+*.crt
+*.cert
+*.p12
+*.pfx
+certs/
+certificates/
+
+# SSH Keys - SECURITY CRITICAL
+*.pub
+id_rsa
+id_ed25519
+known_hosts
+
+# Secrets and Credentials - SECURITY CRITICAL
+secrets/
+credentials/
+*.secret
+*.credentials
+.secrets
+.credentials
+
 # OS
 .DS_Store
 Thumbs.db
@@ -61,3 +107,19 @@ deploy.py
 
 # Development tracking (optional - uncomment to exclude)
 # task.md
+
+# Temporary Files
+*.tmp
+*.temp
+.cache/
+tmp/
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+
+# Production Specific
+production/
+*.prod
