feat: complete IBN pipeline — metrics, Grafana dashboards, ESP32-CAM firmware fix, demo menu bugfixes
Core changes:
- src/metrics_exporter.py: add ibs_cam_resolution_index, ibs_cam_brightness,
  ibs_cam_enabled, ibs_device_enforcement_total gauges/counters
- src/enforcement/device.py: record per-device enforcement metrics and camera
  state on every MQTT policy application
- src/enforcement/network.py: enforce TC rules on real interface, improved
  error handling and logging
- src/intent_manager/api.py: record enforcement timing via Prometheus histogram
- src/intent_manager/parser.py: extend parser to handle all 38 intent types
  across simulated nodes, ESP32 CO2, audio, and CAM devices
- src/policy_engine/engine.py: generate correct policies for all intent types
- src/main.py: wire metrics_exporter into startup

ESP32-CAM firmware (esp32-cam-node/main/esp32_cam_main.c):
- Fix stream_handler() loop to respect g_cam_settings.enabled flag
  (camera_control disable intent now actually pauses HTTP MJPEG stream)
- Add 2-frame stabilisation skip after set_framesize() to prevent
  corrupt frames on resolution change

Grafana dashboards:
- monitoring/grafana/provisioning/dashboards/network-enforcement.json:
  25 panels across 6 rows; add ESP32-CAM panels (resolution, brightness,
  enabled), IoT node state row, device enforcement operations panel
- monitoring/grafana/provisioning/dashboards/iot-nodes-dashboard.json:
  add node enabled/disabled state and node priority panels (16 total)
- monitoring/grafana/dashboards/network-enforcement.json: live copy synced

Prometheus:
- monitoring/prometheus/prometheus.yml: add esp32-dual-node scrape job
  (10.218.189.218:8080) exposing both CO2 and audio metrics from single
  ESP32 hardware node

Demo menu (scripts/demo_menu.py):
- Fix MQTT container name: imperium-mqtt-1 -> imperium-mqtt
- Fix CO2 sensor IP: 10.218.189.206 -> 10.218.189.218 (dual-node, 3 places)
- Fix audio metric key: telemetry_publish_interval_ms -> audio_publish_inte

--- a/config/imperium.service
+++ b/config/imperium.service
@@ -12,7 +12,7 @@ Environment="PATH=/home/imperium/Imperium/venv/bin:/usr/local/sbin:/usr/local/bi
 Environment="PYTHONPATH=/home/imperium/Imperium"
 Environment="PYTHONUNBUFFERED=1"
 Environment="FLASK_ENV=production"
-Environment="NETWORK_INTERFACE=eth0"
+Environment="NETWORK_INTERFACE=wlan0"
 
 # Ensure database and log directories exist
 ExecStartPre=/bin/mkdir -p /home/imperium/Imperium/data
